--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,15 +4,23 @@ services:
   client:
     build: ./client
     ports:
-      - "3000:3000"
+      - "3001:3000"        # changed host port to 3001 to avoid conflict
     environment:
       - REACT_APP_YOUR_HOSTNAME=http://server:5000
     depends_on:
       - server
+    volumes:
+      - ./client:/app      # mount local client code for Jenkins
+
+    container_name: client_jenkins
 
   server:
     build: ./server
     ports:
-      - "5000:5000"
+      - "5001:5000"        # changed host port to 5001
     env_file:
       - ./server/.env
+    volumes:
+      - ./server:/app      # mount local server code for Jenkins
+
+    container_name: server_jenkins
